# commitment

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  commitment.yml
.github/workflows/: build-and-lint.yml  ci.yml
src/: cli.rs  config.rs  defs.rs  interpreter.rs  main.rs  parsing.rs  scriptgen.rs  temp.rs
src/cli/: execute.rs  install.rs
