[package]
name = "commitment"
version = "0.2.3"
edition = "2021"
authors = ["Ryan Burmeister-Morrison"]
description = "Simplify your Git pre-commit hooks"
license = "GPL-3.0-or-later"
homepage = "https://github.com/rburmorrison/commitment"
repository = "https://github.com/rburmorrison/commitment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
crossterm = "0.26.1"
dirs = "5.0.1"
glob = "0.3.1"
indexmap = { version = "1.9.3", features = ["serde"] }
nom = "7.1.3"
once_cell = "1.18.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
