[package]
name = "commitment"
version = "0.2.3"
edition = "2021"
authors = ["Ryan Burmeister-Morrison"]
description = "Simplify your Git pre-commit hooks"
license = "GPL-3.0-or-later"
homepage = "https://github.com/rburmorrison/commitment"
repository = "https://github.com/rburmorrison/commitment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
glob = "0.3.1"
indexmap = { version = "2.2.6", features = ["serde"] }
nom = "7.1.3"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34" # deprecated, but we're using it for now until a good alternative is found
thiserror = "1.0.58"
