[package]
name = "commitment"
version = "0.2.3"
edition = "2021"
authors = ["Ryan Burmeister-Morrison"]
description = "Simplify your Git pre-commit hooks"
license = "GPL-3.0-or-later"
homepage = "https://github.com/rburmorrison/commitment"
repository = "https://github.com/rburmorrison/commitment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.84"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0", default_features = false, features = ["windows"] }
glob = "0.3.1"
indexmap = { version = "2.2.6", features = ["serde"] }
nom = "7.1.3"
serde = { version = "1.0.202", features = ["derive"] }

# deprecated, but we're using it for now until a good alternative is found
serde_yaml = "0.9.34"
